<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumenCompra">

    <TextView
        android:id="@+id/tvPrenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elegido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrenda"
        app:layout_constraintVertical_bias="0.083"
        app:srcCompat="@drawable/calcetin" />

    <TextView
        android:id="@+id/tvTalla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/tvPrenda"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/tvCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/tvTalla"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="sumarOnClick"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidad"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="restarOnClick"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidad"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/tvCantidadNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/porFavor"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvPrenda"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidad"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tvPrecioNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvCantidadNum"
        app:layout_constraintVertical_bias="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="236dp" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="208dp"
        android:layout_height="100dp"
        android:backgroundTint="#0e9632"
        android:onClick="btnComprarOnClick"
        android:text="@string/comprar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/tvTallaNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="talla"
        app:layout_constraintBottom_toTopOf="@+id/tvCantidadNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvPrenda"
        app:layout_constraintVertical_bias="0.859" />
</androidx.constraintlayout.widget.ConstraintLayout>